--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -1624,7 +1624,7 @@ a{
 }
 
 .search-bar-main{
-     width: clamp(280px, 100%, 600px);
+     width: clamp(280px, 100%, 800px);
      position: relative;
      border-radius: 0.5rem;
      display: flex;
@@ -1662,7 +1662,7 @@ a{
      position: relative;
      color: var(--white-text);
      background-color: var(--back-color-gold2);
-     font-size: 1.2rem;
+     font-size: 1.5rem;
      /* width: 6%; */
      display: flex;
      flex-direction: row;
@@ -1671,7 +1671,7 @@ a{
      align-self: center;
      transition: all 1s;
      padding: 10px 10px;
-     border-radius: 50%;
+     border-radius: 5px;
      margin: 0 2px ;
 }
 
@@ -1684,7 +1684,7 @@ a{
 .search-bar-main .search-inputs select{
      width: 30%;
      cursor: pointer; 
-     padding: 10px 1% 10px 0.5%;
+     padding: 10px 2% 10px 0.5%;
      border-radius: 5px;
      border: 1px solid var(--gray-text);
 }
@@ -3818,7 +3818,8 @@ a{
 }
 
 .hero-banner-container img{
-     max-height: 100px;
+     /* max-height: 300px; */
+     width: 100%;
 }
 
 
@@ -3877,7 +3878,7 @@ a{
 .horizontal-banner .hr-banner{
      width: 49%;
      position: relative;
-     height: 120px;
+     /* height: 120px; */
      cursor: pointer;
      margin: 5px;
 }
@@ -3915,7 +3916,7 @@ a{
 }
 .horizontal-banner img{
      width: 100%;
-     height: 100%;
+     /* height: ; */
      border: 1px solid var(--back-color-blue1);
 }
 /*End of Banner styles */ 
