--- a/src/styles/MobileView.css
+++ b/src/styles/MobileView.css
@@ -40,7 +40,7 @@
      }
      .home .hello-section .col{
           border-radius: 10px;
-          width: 95%;
+          width: 100%;
           padding:5px 10px 10px;
      }
      .home .hello-section .col h1{
@@ -86,6 +86,31 @@
      /* .home-get-started-sec .row-title h3{
           font-size: 1.2rem;
      } */
+
+     .search-bar-main {
+          position: relative;
+     }
+
+      .search-bar-main:hover
+     .search-bar-main, .search-bar-main .search-inputs input, .search-bar-main i{
+          border-radius: 40px;
+     }
+
+     .search-bar-main i {
+          position: absolute;
+          right: 2%;
+          transform: scale(0.8);
+     }
+
+     .search-bar-main .search-inputs{
+          width:100%;
+
+     }
+
+     .search-bar-main:hover i{
+          top: 10%;
+          right: 5%;
+     }
 }
 
 
