--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -281,7 +281,7 @@
 
      .category-square{
           min-width: 18%;
-          width: 18%;
-          margin: 0 2% 10px;
+          width: 22%;
+          margin: 0 2px 10px;
      }
 }
