--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -68,6 +68,10 @@ html{
      width: 100%;
 }
 
+body{
+     background-color:  var(--light-gray);
+}
+
 *{
      margin: 0;
      padding: 0;
@@ -2623,6 +2627,7 @@ a{
 .category-square:hover{
      cursor: pointer;
      box-shadow: 1px 1px 2px var(--text-color-para1);
+     background-color: var(--white-text);
 }
 .category-square .img{
      position: relative;
@@ -4072,6 +4077,40 @@ a{
      margin: 0 2px;
 }
 
+.web-usage-container{
+     width: 60%;
+     display: flex;
+     border-radius: 10px;
+     background-color: var(--white-text);
+     flex-direction: row;
+     padding: 10px 20px;
+     align-items: center;
+     justify-content: space-between;
+     margin: 20px auto;
+     flex-wrap: wrap;
+}
+
+.web-usage-container h2{
+     font-size: 0.9rem;
+     font-weight: 800;
+     color: var(--text-color-title);
+}
+
+.web-usage-container .visits{
+     width: 20%;
+     border-radius: 5px;
+     background-color: var(--light-gray);
+     padding: 10px 5px;
+     display: flex;
+     flex-direction: row;
+     justify-content: center;
+     color: var(--back-color-gold2);
+}
+
+.web-usage-container .visits h3{
+     font-size: 0.85rem;
+     font-weight: 700;
+}
 /* end of overriders */
 /* media queries */
 
