--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -4078,7 +4078,7 @@ a{
 }
 
 .web-usage-container{
-     width: 60%;
+     width: 50%;
      display: flex;
      border-radius: 10px;
      background-color: var(--white-text);
@@ -4091,24 +4091,28 @@ a{
 }
 
 .web-usage-container h2{
-     font-size: 0.9rem;
-     font-weight: 800;
+     font-size: 1.5rem;
+     font-weight: 900;
      color: var(--text-color-title);
+     width: 90%;
+     margin: 10px auto;
 }
 
 .web-usage-container .visits{
-     width: 20%;
+     width: 40%;
      border-radius: 5px;
      background-color: var(--light-gray);
-     padding: 10px 5px;
+     padding: 30px 5px;
      display: flex;
      flex-direction: row;
      justify-content: center;
      color: var(--back-color-gold2);
+     margin: 10px auto;
+     box-shadow: 2px 2px var(--gray-text);
 }
 
 .web-usage-container .visits h3{
-     font-size: 0.85rem;
+     font-size: 1.2rem;
      font-weight: 700;
 }
 /* end of overriders */
