--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -3036,6 +3036,54 @@ a{
 
 }
 
+.category-page-header h3{
+     width: 90%;
+     font-size: 1.1rem;
+     font-weight: 800;
+     color: var(--text-color-title);
+     margin: 10px 0 5px;
+     display: flex;
+}
+
+.category-page-header .filter-content{
+     width: 98%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+}
+
+.category-page-header .filter-content .row{
+     width: 98%;
+}
+
+.category-page-header .filter-content .row h4{
+     font-size: 0.9rem;
+     font-weight: 700;
+     color: var(--text-color-para1);
+     margin-bottom: 5px;
+}
+
+.category-page-header .filter-content .row select{
+     width: 95%;
+     padding: 5px;
+     border-radius: 5px;
+     border: 1.5px solid var(--gray-text);
+     font-size: 0.8rem;
+     color: var(--text-color-title);
+     font-weight: 700;
+}
+
+.category-page-header .filter-content .row select:focus{
+     border: 1.5px solid var(--gray-text);
+}
+
+.category-page-header .filter-content .row select option{
+     width: 90%;
+     font-size: 0.7rem;
+}
+
+
 .category-adverts{
      width: 80%;
      min-width: 360px;
