--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -907,22 +907,23 @@ a{
 }
 
 .home-request-quote-header a{
-     background-color: var(--back-color-gold1);
-     color: var(--back-color-blue1);
+     /* background-color: var(--back-color-gold1); */
+     background-color: var(--text-color-title);
+     /* color: var(--back-color-blue1); */
+     color: var(--light-gray);
      border-radius: 2.5px;
-     padding: 2.5px 5px;
-     font-size: 0.7rem;
+     padding: 5px 7.5px;
+     font-size: 0.9rem;
      white-space: nowrap;
      margin: 0 5px;
-     font-weight: 500;
-     border: 1.5px solid var(--featured-plan);
-     animation: movingBorder 2s infinite linear;
-     border-radius: 5px;
+     font-weight: 700;
+     border: 1px solid var(--back-gold-color-v1);
+     border-radius: 7.5px;
 }
 
 .home-request-quote-header a:hover{
-     background-color: var(--text-color-para2);
-     color: var(--white-text);
+     background-color: var(--light-gray);
+     color: var(--back-gold-color-v1);
 }
 
 .home .hello-section .sec-banner{
@@ -955,11 +956,12 @@ a{
      justify-content: space-between;
      position: relative;
      background-color: var(--light-gray);
+     padding-inline: 1%;
 }
 
 
 .page-main .side{
-     width: 10%;
+     width: 15%;
      display: flex;
      flex-direction: row;
      align-items: flex-start;
@@ -1238,6 +1240,14 @@ a{
 }
 /* main containers */
 
+.ads-container{
+     width: 99%;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     justify-content: center;
+     flex-wrap: wrap;
+}
 .image-slider{
      width: 100%;
      position: relative;
@@ -1636,20 +1646,20 @@ a{
 }
 
 .search-bar-main{
-     width: clamp(280px, 100%, 800px);
+     width: clamp(280px, 95%, 700px);
      position: relative;
-     border-radius: 0.5rem;
      display: flex;
      flex-direction: row;
-     border-radius: 5px;
+     border-radius: 10px;
      overflow: hidden;
      border: 1.1px solid var(--back-color-gold2);
      padding: 5px 0;
      justify-content: space-evenly;
+     margin-block: 5px;
 }
 
 .search-bar-main .search-inputs{
-     width: 90%;
+     width: 94%;
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -1658,11 +1668,12 @@ a{
 }
 
 .search-bar-main .search-inputs input{
-     width: 36%;
-     padding: 10px 6% 10px 2%;
+     width: 37%;
+     padding: 5px 6% 5px 2%;
      border: none;
      border-radius: 5px;
      border: 1px solid var(--gray-text); 
+     font-size: 0.8rem;
 }
 
 .search-bar-main .search-inputs input:focus{
@@ -1682,9 +1693,9 @@ a{
      justify-content: center;
      align-self: center;
      transition: all 1s;
-     padding: 10px 10px;
+     padding: 5px 5px;
      border-radius: 5px;
-     margin: 0 2px ;
+     margin: 0 1px;
 }
 
 .search-bar-main i:hover{
@@ -1694,11 +1705,12 @@ a{
 }
 
 .search-bar-main .search-inputs select{
-     width: 30%;
+     width: 31%;
      cursor: pointer; 
-     padding: 10px 2% 10px 0.5%;
+     padding: 5px 2% 5px 0.5%;
      border-radius: 5px;
      border: 1px solid var(--gray-text);
+     font-size: 0.8rem;
 }
 
 .search-bar-main .search-inputs select:focus{
@@ -2073,6 +2085,16 @@ a{
 
      /*containers*/
 
+.container{
+     width: 99%;
+     background-color: var(--white-text);
+     display: flex;
+     flex-direction: column;
+     padding: 5px 0.5%;
+     margin: 10px auto;
+     border-radius: 10px;
+}
+
 .loading{
      width: clamp(350px, 80%, 1600px);
      margin: 10px auto;
@@ -2157,9 +2179,8 @@ a{
      flex-direction: row;
      align-items: flex-start;
      justify-content: center;
-     margin: 5px auto 20px;
-     padding:5px 0 5px ;
-     max-width: 1600px;
+     margin: 2.5px auto;
+     padding:2.5px 0 2.5px ;
 }
 
 .view-more-container{
@@ -2754,8 +2775,7 @@ a{
 
 .product-square-container h5:hover{
      cursor: pointer;
-     background-color: var(--text-color-title);
-     color: var(--white-text);
+     color: var(--back-color-blue2);
      padding: 1px 3px;
      max-width: auto;
 }
@@ -3393,7 +3413,7 @@ a{
 }
 
 .advert-page-mainAdvert .col .cat{
-     margin: 5px auto 5px;
+     margin: 0px auto 5px;
      width: 100%;
      display: flex;
      flex-direction: row;
@@ -3403,7 +3423,7 @@ a{
 .advert-page-mainAdvert .col .cat a{
      background-color: var(--text-color-title);
      color: var(--white-text);
-     border-radius: 2rem;
+     border-radius: 10px;
      padding: 4px 10px ;
      margin: 5px 20px 5px 0;
 }
@@ -3421,7 +3441,7 @@ a{
      font-weight: 800;
      font-size: 2rem;
      color: var(--text-color-title);
-     margin: 20px auto 5px;
+     margin: 10px auto 5px;
      text-align: left;
      width: 100%;
 }
@@ -3473,7 +3493,7 @@ a{
 
 .advert-page-mainAdvert .col .advert-price{
      width: 100%;
-     margin: 10px auto;
+     margin: 5px auto;
      text-align: left;
      font-size: 1.5rem;
      color: var(--back-color-red1);
@@ -3519,7 +3539,7 @@ a{
 
 .advert-page-mainAdvert .col .vendor{
      width: 100%;
-     margin: 10px auto;
+     margin: 0px auto 10px;
      /* box-shadow: 1px 1px 5px var(--text-color-para1); */
      border-radius: 10px;
      padding: 10px;
@@ -3897,28 +3917,30 @@ a{
 .hero-banner-container img{
      /* max-height: 300px; */
      width: 100%;
+     border-radius: 5px;
 }
 
 
 .side-banner{
-     width: 96%;
+     width: 95%;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
-     background-color: var(--white-text);
      color: var(--white-text);
-     border-radius:2px;
      gap: 10px;
+     padding-top: 10px;
+     background-color: var(--white-text);
+     border-radius: 5px;
 }
 
 .side-banner .vr-banner{
-     width: 100%;
-     height: 220px;
+     width: 90%;
+     /* height: 220px; */
      display: flex;
      flex-direction: column;
      align-items: center;
-     margin: 10px 0;
+     margin-bottom: 10px;
      position: relative;
      cursor: pointer;
 }
@@ -3926,6 +3948,8 @@ a{
 .side-banner .vr-banner img{
      width: 100%;
      height: 100%;
+     border-radius: 5px;
+     border: 1px solid var(--back-color-gold2-transparent);
 }
 
 .side-banner .vr-banner:hover .hover-content{
@@ -3936,14 +3960,13 @@ a{
      width: 100%;
      cursor: pointer;
      transition: opacity 0.5s ease-in-out;
-     box-shadow: 0.3px 0.3px 4px var(--text-color-black);
 }
 
 .horizontal-banner{
-     width: 90%;
+     width:100%;
      display: flex;
      flex-direction: row;
-     justify-content: flex-start;
+     justify-content: space-between;
      align-items: center;
      border-radius: 5px;
      color: var(--white-text);
@@ -3953,7 +3976,7 @@ a{
 }
 
 .horizontal-banner .hr-banner{
-     width: 49%;
+     width: 48%;
      position: relative;
      /* height: 120px; */
      cursor: pointer;
@@ -3961,7 +3984,7 @@ a{
 }
 
 .horizontal-banner .hr-banner:hover .hover-content{
-     display: flex;
+     display: none;
 }
 
 .hover-content{
@@ -3975,6 +3998,7 @@ a{
      height: 100%;
      background: var(--text-color-title-transparent);
      display: none;
+     border-radius: 5px;
 }
 
 .hover-content a{
@@ -3994,7 +4018,8 @@ a{
 .horizontal-banner img{
      width: 100%;
      /* height: ; */
-     border: 1px solid var(--back-color-blue1);
+     border: 1px solid var(--back-gold-color-v1);
+     border-radius: 5px;
 }
 /*End of Banner styles */ 
 
