--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -67,36 +67,52 @@
      }
      
      .dashboard-navbar{
-          position: fixed;
           display: flex;
-          width: 50%;
+          width: 10%;
           /* max-width: 300px; */
           flex-direction: column;
           align-items: center;
           justify-content: flex-start;
           margin:0;
-          padding: 10vh 5px;
-          background-color: #3c3636dd;
-          top: 0;
-          left: -50%;
-          height: 100vh;
-          z-index: 100;
+          padding: 2vh 5px;
+          background-color: var(--white-text);
           color: var(--white-text);
           transition: all 0.3s;
+          border: 1.1px solid var(--text-color-title);
      }
      .dashboard-content{
-          width: 100%;
+          width:85%;
      }
 
      .dashboard-link{
           width: 90%;
-          border-radius: 5px;
-          background-color: var(--text-color-title);
-          padding: 10px 5px;
+          aspect-ratio: 1/1;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: center;
      }
 
      .dashboard-link a{
-          color: var(--white-text);
+          color: var(--back-gold-color-v1);
+          text-align: center;
+     }
+
+     .dashboard-link a i {
+          margin: 0;
+          font-size: 1.5rem;
+     }
+
+     .dashboard-link span {
+          display: none;
+     }
+
+     .dash-advert-row{
+          width: 45%;
+     }
+
+     .dash-advert-row  .icons{
+          width: 50%;
      }
 }
 
@@ -129,8 +145,7 @@
      }
 
      .header-logo-image{
-          width: 70px;
-          min-width: 20px;
+          min-width: 120px;
      }
      .home .hello-section .col h1{
           font-size: 2.5rem;
@@ -300,5 +315,9 @@
      .web-usage-container .visits{
           width: auto;
           margin: 5px auto;
+     }
+
+     .dash-advert-row{
+          width: 90%;
      }
 }
