--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -320,4 +320,73 @@
      .dash-advert-row{
           width: 90%;
      }
+
+     .admin-layout{
+          flex-direction: column;
+          align-items: center;
+          justify-content: flex-start;
+          gap: 10px;
+          padding-block: 5px;
+     }
+
+     .admin-navbar {
+          width: 100%;
+          height: 10vh;
+          flex-direction: row;
+     }
+
+
+     .admin-content {
+          width: 100%;
+          height: 85vh;
+     }
+
+     .admin-navbar .dash-logo-container{
+          width: 25%;
+     }
+
+     .admin-navbar .dash-nav-container{
+          width: 75%;
+          flex-direction: row;
+          align-items: center;
+          gap: 5px;
+          overflow-x: scroll;
+     }
+
+     .admin-navbar .dash-nav-container a {
+          font-size: 2rem;
+          text-align: center;
+          justify-content: center;
+          border-radius: 5px;
+     }
+
+     .admin-navbar .dash-nav-container a span{
+          display: none;
+     }
+
+     .notifier-container {
+          width: 90%;
+     }
+
+     .dash-card-info {
+          width: 30%;
+     }
+
+     .dash-agents-table{
+          min-width: 800px;
+     }
+
+     .dash-main-row{
+          overflow: hidden;
+          overflow-x: scroll;
+     }
+
+     .admin-forms-container{
+          width: 60%;
+     }
+
+     .dash-shop-card{
+          width: 48%;
+     }
 }
+
