--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -4448,6 +4448,7 @@ a{
      border: 1.5px solid var(--gray-text);
      margin-bottom: 10px;
      transition: all 0.5s ease;
+     position: relative;
 }
 
 .admin-advert-card:hover{
@@ -4507,6 +4508,28 @@ a{
      align-items: center;
      justify-content: flex-start;
      gap: 10px;
+}
+
+.admin-advert-card-load{
+     width: 100%;
+     height: 100%;
+     background-color: #00000042;
+     position: absolute;
+     top: 0;
+     left: 0;
+     border-radius: 5px;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     -webkit-backdrop-filter: blur(3px);
+     backdrop-filter: blur(3px);
+}
+
+.admin-advert-card-load span{
+     color: rgb(232, 230, 230);
+     font-size: 0.9rem;
+     font-weight: 700;
 }
 
 .admin-shops-container {
