--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -4526,11 +4526,24 @@ a{
      backdrop-filter: blur(3px);
 }
 
+.new-ad-tag{
+     position: absolute;
+     top: 0;
+     left: 0;
+     border-radius: 5px;
+     background-color: var(--back-color-blue2);
+     color: var(--light-gray);
+     font-size: 0.8rem;
+     font-weight: 700;
+     padding: 2.5px 10px;
+}
+
 .admin-advert-card-load span{
      color: rgb(232, 230, 230);
      font-size: 0.9rem;
      font-weight: 700;
 }
+
 
 .admin-shops-container {
      width: 100%;
@@ -4553,6 +4566,7 @@ a{
      transition: all 0.5s ease;
      padding: 5px;
      gap: 10px;
+     position: relative;
 }
 
 .dash-shop-card .row{
