--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -4531,11 +4531,12 @@ a{
      top: 0;
      left: 0;
      border-radius: 5px;
-     background-color: var(--back-color-blue2);
-     color: var(--light-gray);
+     background-color: var(--white-text);
+     color: var(--back-color-blue1);
      font-size: 0.8rem;
      font-weight: 700;
      padding: 2.5px 10px;
+     border: 1.5px solid var(--back-color-blue2);
 }
 
 .admin-advert-card-load span{
